--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -115,8 +115,8 @@
     "EditCampaignScreen",
     "EditTemplateScreen",
     "CreateNewScreen",
-    "PreviewCampaign",
-    "PreviewTemplate",
+    "PreviewCampaignScreen",
+    "PreviewTemplateScreen",
     "SendOutScreen",
     "ImportExcelData",
     "FormExcelData"
